# Auditor

./: .gitignore  AGENT4_TAINT_VERIFICATION.md  AGENTS.md  ARCHITECTURE.md  AUDIT_COMPLETE.md  AUDIT_EXECUTIVE_SUMMARY.md  AUDIT_QUICK_REFERENCE.md  Architecture.md  BATCH_AUDIT_REPORT.md  BUGS_FIXED_VERIFICATION.md  CDK_ARCHITECTURE.md  CDK_AUDIT_REPORT.md  CDK_IMPLEMENTATION_STATUS.md  CHANGELOG_2025-11-25.md  CLAUDE.md  CLI_AUDIT_REPORT.md  COMMIT_MESSAGE.txt  COMMIT_MSG.txt  COMMIT_MSG_CONTEXT_DFG.txt  COMMIT_MSG_DFG.txt  COMMIT_MSG_v2.0.txt  COMMIT_READY.md  COMPREHENSIVE_TEST_PLAN.md  CONSOLIDATION_IMPLEMENTATION_REPORT.md  CONSOLIDATION_STATUS_REPORT.md  CONTEXT_QUERY_TEST_REPORT.md  CONTRIBUTING.md  CONTRIBUTING_new.md  CORE_STORAGE_VERIFICATION_REPORT.md  CROSS_FILE_TAINT_VERIFICATION.md  CWE_ENHANCEMENT_PROGRESS.md  Contributing.md  DEPS_DOCS_MODERNIZATION.md  DFG_ARCHITECTURE_ANALYSIS.md  DFG_IMPLEMENTATION_COMPLETE.md  DFG_WIRING_PLAN.md  DOCS_UPDATED_SUMMARY.md  DOCUMENTATION_SYNC_SUMMARY.txt  DOCUMENTATION_UPDATE_SUMMARY.md  EXPLORATION_SUMMARY.txt  (+220 more)
Architecture/: 04_taint.md  05_fce.md  08_machinel.md  09_pipeline.md  11_session.md
Planning_test/: TRIAL_GUIDE.md
RULES/: ENHANCE_RULES.md
agents/: AGENTS.md  dataflow.md  dataflow_condensed.md  planning.md  refactor.md  refactor_condensed.md  security.md
benchmarks/: object_literal_performance.py  object_literal_realistic.py
docs/: EXTRACTOR_CONTRACT_AUDIT.md  EXTRACTOR_MISMATCH_SUMMARY.txt  INDEXER_VERIFICATION_SOP.md  RULE_METADATA_GUIDE.md  SCHEMA_AUDIT_REPORT.md  nightmare_fuel.md  rulecheck_sop.md
findings/: EXECUTIVE_SUMMARY.md  MASTER_AUDIT_REPORT.md  audit_auth_rules.json  audit_build_rules.json  audit_common_rules.json  audit_dependency_rules.json  audit_dependency_rules_SUMMARY.md  audit_deployment_rules.json  audit_frameworks_rules.json  audit_logic_rules.json  audit_logic_rules_SUMMARY.md  audit_node_rules.json  audit_orm_rules.json  audit_performance_rules.json  audit_python_rules.json  audit_react_rules.json  audit_react_rules_SUMMARY.md  audit_secrets_rules.json  audit_secrets_rules_SUMMARY.md  audit_security_rules.json  audit_sql_rules.json  audit_typescript_rules.json  audit_vue_rules.json  audit_xss_rules.json
openspec/: node_receipts.md  project.md
scripts/: README_GOLDEN_SNAPSHOT.md  __init__.py  api_loader_v3.py  ast_modernizer_v4.py  ast_walk_to_filecontext.py  audit_extractors.py  audit_node_extractors.py  cleanup_rule_metadata.py  cli_smoke_test.py  create_golden_snapshot.py  extractor_truth.txt_old  fix_ast_v3.py  fix_broken_extractors.py  fix_dispatcher_calls.py  fix_forward_refs.py  fix_future_annotations.py  fix_future_imports.py  fix_recursive_tree_walks.py  fix_stderr_migration.py  fix_utils_imports.py  forensic_audit.py  health_check.py  jscodeshift_faq.md  libcst_faq.md  loguru_migration.py  purge_comments_V2.js  purge_comments_jsV2.js  purge_comments_v3.py  purge_commentsv3.py  query_alias.py  query_alias2.py  rich_migration.py  rule_antipattern_detector.py  rule_antipattern_fixer.py  run_pyupgrade.py  scan_skipped_prints.py  smoke_fixtures.json  smoke_test.py  stdlib_loguru_migrationv2.py  test_poisoned_ref.js  (+9 more)
taint_work/: handoff.md  multihop_marathon.md  refactor_audit_report.md  taint_work.md
test_project/: check_cfg.py  debug_index.py  test_cfg.py
tests/: DO_NOT_REINDEX_IN_TESTS.md  EXTRACTION_TEST_GAPS.md  FIXTURE_COVERAGE_COMPLETE.md  NODE_EXTRACTOR_EXPANSION.md  PURPOSE_OF_TESTS.md  README.md  TERRAFORM_TESTING_COMPLETE.md  TESTS_ENHANCEMENT_SUMMARY.md  __init__.py  compare_dbs.py  conftest.py  terraaform_test.txt  test_bash_impl.py  test_bash_security_rules.py  test_blueprint_command.py  test_boundaries.py  test_cdk_analysis.py  test_cdk_extraction.py  test_cli_ascii.py  test_code_snippets.py  test_database_integration.py  test_docker_tag_parsing.py  test_e2e_smoke.py  test_edge_cases.py  test_explain_command.py  test_extractors.py  test_fidelity.py  test_fidelity_golden_master.py  test_fidelity_integration.py  test_github_actions.py  test_go_e2e.py  test_go_impl.py  test_go_integration.py  test_go_schema_contract.py  test_graph_builder.py  test_graph_fixes.py  test_graphql_database.py  test_graphql_extractor.py  test_imports.py  (+35 more)
tests/deepflow-python/: README.md  docker-compose.yml  pyproject.toml  requirements.txt
tests/deepflow-python/app/: __init__.py  __main__.py  config.py  database.py  main.py
tests/deepflow-python/app/adapters/: cache_adapter.py  external_api.py  file_storage.py
tests/deepflow-python/app/api/middleware/: auth.py  logging.py
tests/deepflow-python/app/api/routes/: admin.py  reports.py  safe.py  users.py
tests/deepflow-python/app/core/: __init__.py  command_executor.py  query_builder.py  template_renderer.py
tests/deepflow-python/app/models/: report.py  user.py
tests/deepflow-python/app/processors/: data_transformer.py  enricher.py  validator.py
tests/deepflow-python/app/repositories/: base_repository.py  report_repository.py  safe_repository.py  user_repository.py
tests/deepflow-python/app/services/: admin_service.py  notification_service.py  report_service.py  safe_service.py  user_service.py
tests/deepflow-python/app/utils/: path_utils.py  serializers.py  string_utils.py
tests/fixtures/rust/calorie_tracker/: Cargo.toml
tests/fixtures/rust/calorie_tracker/src/: lib.rs  main.rs
tests/fixtures/rust/calorie_tracker/src/api/: handlers.rs  middleware.rs  mod.rs  responses.rs
tests/fixtures/rust/calorie_tracker/src/models/: food.rs  meal.rs  mod.rs  user.rs
tests/fixtures/rust/calorie_tracker/src/storage/: mod.rs  repository.rs  sqlite.rs
tests/fixtures/rust/calorie_tracker/src/utils/: crypto.rs  mod.rs  validation.rs
tests/fixtures/rust/task_scheduler/: Cargo.toml  spec.yaml
tests/fixtures/rust/task_scheduler/src/: async_runtime.rs  ffi.rs  lib.rs  main.rs  taint_flows.rs  utils.rs
tests/fixtures/rust/task_scheduler/src/job/: handler.rs  mod.rs  state.rs
tests/fixtures/rust/task_scheduler/src/scheduler/: cron.rs  executor.rs  mod.rs
tests/fixtures/rust/task_scheduler/src/storage/: json.rs  mod.rs
(+1795 files in other folders)
