[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "theauditor"
version = "1.4.2-RC1"
description = "Offline, air-gapped CLI for repo indexing, evidence checking, and task running"
readme = "README.md"
requires-python = ">=3.14"
license = {text = "AGPL-3.0"}
authors = [
    {name = "TheAuditor Team"}
]
dependencies = [
    # BOOTSTRAP ONLY: Minimal CLI to trigger sandbox setup
    # ALL actual analysis runs in .auditor_venv/ sandbox
    "click==8.3.1",
]

[project.optional-dependencies]
# Runtime dependencies (installed ONLY in sandbox via 'aud setup-ai')
# These are NOT installed globally to keep user's Python environment clean
runtime = [
    # Config and rules
    "PyYAML==6.0.3",
    "json5==0.12.1",
    # Language parsers
    "sqlparse==0.5.3",
    "graphql-core==3.2.7",
    "dockerfile-parse==2.0.1",
    "tree-sitter==0.25.2",
    "tree-sitter-language-pack==0.11.0",
    # ML features
    "numpy==2.3.5",
    "scikit-learn==1.7.2",
    "joblib==1.5.2",
    # Documentation fetching
    "beautifulsoup4>=4.12.0",
    "markdownify>=0.11.0",
    # Graph analysis
    "networkx==3.5",
]

# Development tools (for developing TheAuditor itself)
dev = [
    "pytest==9.0.1",
    "pytest-cov>=4.0.0",
    "pytest-xdist>=3.0.0",
    "ruff==0.14.5",
    "black==25.11.0",
    "mypy==1.18.2",
    "bandit==1.9.1",
    "pylint==4.0.3",
]

# Complete install (for sandbox)
# This is what venv_install.py uses
all = [
    "theauditor[runtime,dev]",
]

[project.scripts]
aud = "theauditor.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["theauditor"]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "SIM",  # flake8-simplify
]
ignore = [
    "E501",  # line too long - handled by black
    "SIM105",  # contextlib.suppress - can be less readable
    "SIM117",  # multiple with statements - can be less readable
]

[tool.ruff.lint.isort]
known-first-party = ["theauditor"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-v"

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_configs = true