[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "theauditor"
version = "2.0.2rc1"
description = "Offline, air-gapped CLI for repo indexing, evidence checking, and task running"
readme = "README.md"
requires-python = ">=3.14"
license = {text = "AGPL-3.0"}
authors = [
    {name = "TheAuditor Team"}
]
dependencies = [
    # Core CLI and output
    "click==8.3.1",
    "rich>=13.0.0",
    "loguru==0.7.3",
]

[project.optional-dependencies]
# Runtime dependencies (installed ONLY in sandbox via 'aud setup-ai')
# These are NOT installed globally to keep user's Python environment clean
runtime = [
    # Data validation (FCE schema)
    "pydantic==2.12.4",
    # Config and rules
    "PyYAML==6.0.3",
    "json5==0.12.1",
    # Language parsers
    "sqlparse==0.5.3",
    "graphql-core==3.2.7",
    "dockerfile-parse==2.0.1",
    "tree-sitter==0.25.2",
    "tree-sitter-language-pack==0.11.0",
    # ML features
    "numpy==2.3.5",
    "scikit-learn==1.7.2",
    "joblib==1.5.2",
    # Documentation fetching
    "beautifulsoup4>=4.14.2",
    "markdownify>=1.2.2",
    # Async HTTP client for dependency checking
    "httpx>=0.28.0",
    # Graph analysis
    "networkx==3.5",
    # Git object database (shadow snapshots)
    "pygit2>=1.14.0",
]

# Development tools (for developing TheAuditor itself)
dev = [
    "pytest==9.0.1",
    "pytest-cov>=7.0.0",
    "pytest-xdist>=3.8.0",
    "ruff==0.14.5",
    "black==25.11.0",
    "mypy==1.19.0",
    "bandit==1.9.1",
    "pylint==4.0.3",
    # Codemod for logging migration
    "libcst==1.8.6",
]

# Complete install (for sandbox)
# This is what venv_install.py uses
all = [
    "theauditor[runtime,dev]",
]

[project.scripts]
aud = "theauditor.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["theauditor"]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "SIM",  # flake8-simplify
]
ignore = [
    "E501",  # line too long - handled by black
    "SIM105",  # contextlib.suppress - can be less readable
    "SIM117",  # multiple with statements - can be less readable
]

[tool.ruff.lint.isort]
known-first-party = ["theauditor"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-v"

[tool.mypy]
python_version = "3.14"
strict = true
warn_unused_configs = true
packages = ["theauditor"]
plugins = ["pydantic.mypy"]
exclude = [
    "tests/",
    "scripts/",
    "theauditor/ast_extractors/javascript/",
    "theauditor/test_fixtures/",
    "\\.pf/",
    "\\.venv/",
    "\\.auditor_venv/",
    "dist/",
    "build/",
]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true