[package]
name = "calorie_tracker"
version = "0.1.0"
edition = "2021"
authors = ["Test User <test@example.com>"]
description = "A CLI calorie tracking application"
license = "MIT"

[dependencies]
# Async runtime
tokio = { version = "1.34", features = ["full"] }

# Web framework (optional API mode)
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Database
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# CLI
clap = { version = "4.4", features = ["derive"] }

# Date/Time
chrono = { version = "0.4", features = ["serde"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# UUID generation
uuid = { version = "1.6", features = ["v4", "serde"] }

# Password hashing
argon2 = "0.5"

# Configuration
config = "0.14"

# Async trait support
async-trait = "0.1"

[dev-dependencies]
tempfile = "3.8"
tokio-test = "0.4"

[features]
default = []
api = []  # Enable HTTP API mode

[[bin]]
name = "caltrack"
path = "src/main.rs"
