[package]
name = "task_scheduler"
version = "0.1.0"
edition = "2021"
authors = ["Test Fixture"]
description = "A CLI job scheduler for testing Rust extraction"
license = "MIT"

[dependencies]
# CLI
clap = { version = "4.4", features = ["derive"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Unique IDs
uuid = { version = "1.6", features = ["v4", "serde"] }

# Error handling
thiserror = "1.0"

# Optional: home directory detection
dirs-next = "2.0"

[dev-dependencies]
tempfile = "3.8"

[[bin]]
name = "taskctl"
path = "src/main.rs"

[lib]
name = "task_scheduler"
path = "src/lib.rs"
